--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <h1 class="name">Skytele</h1>
+    <hr>
     <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     <%= yield %>
