--- a/app/views/carriers/_form.html.erb
+++ b/app/views/carriers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @carrier do |t| %>
+<%= form_for [@carrier] do |t| %>
 <%= t.label :name %>
 <%= t.text_field :name %>
 <%= t.label :logo_url %>
