--- a/app/views/carriers/new.html.erb
+++ b/app/views/carriers/new.html.erb
@@ -1,3 +1,10 @@
-<h1>Add a Carrier</h1>
+<h1 id="subhead">Add a Carrier</h1>
 
-<%= render "form" %>
+<%= form_for @carrier do |f| %>
+
+<%= f.collection_select(:id, User.first.carriers.all, :id, :name) %>
+
+
+ <%= f.submit %>
+
+<% end %>
