--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,45 @@
   <head>
     <title>SkyTele</title>
     <%= csrf_meta_tags %>
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class="head">
     <h1 class="name">Skytele</h1>
-    <hr>
+    <div class="nav">
+      <a id="nav" href="/">Home</a>
+      <a id="nav" href="/products">Products</a>
+      <a id="nav" href="/about">About</a>
+      <a id="nav" href="#">Contact Us</a>
+      <% if current_user %>
+      <div id="log_out">
+      <%= link_to current_user.email, destroy_user_session_path, method: :delete, :id => "logout" %>
+    </div>
+      <% else %>
+      <div id="log_in">
+      <%= link_to "Log In", user_session_path, :id => "login" %>
+    </div>
+      <div id="sign_up">
+      <%= link_to "Sign up", new_user_registration_path, :id => "signup" %>
+    </div>
+      <% end %>
+    </div>
+  </div>
+  <div id="message">
     <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+    </div>
     <%= yield %>
+  <!-- <footer>
+    <li id="footer">Information</li>
+    <li id="footer">Help</li>
+    <li id="footer">Account</li>
+  </footer> -->
   </body>
 </html>
