--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -153,14 +153,14 @@ li {
 .logo {
   display: flex;
   flex-flow: row;
-  /*flex: auto;*/
   flex-wrap: wrap;
-  margin: 0 10% 0 15%;
+  justify-content: center;
 }
 
 .logo_id {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   height: 100%;
   margin-right: 10px;
   margin-left: 10px;
