--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,16 @@
       <a id="nav" href="/">Home</a>
       <a id="nav" href="/products">Products</a>
       <a id="nav" href="/about">About</a>
-      <a id="nav" href="#">Contact Us</a>
+      <a id="nav" href="/contact">Contact Us</a>
       <% if current_user %>
-      <div id="log_out">
-      <%= link_to current_user.email, destroy_user_session_path, method: :delete, :id => "logout" %>
+      <div class="dropdown">
+  <button class="dropbtn"><%= current_user.email %></button>
+  <div class="dropdown-content">
+    <a href="profiles/<%= current_user.profile_id %>">Profile</a>
+    <a href="/carriers">Carriers</a>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+  </div>
+</div>
     </div>
       <% else %>
       <div id="log_in">
@@ -38,10 +44,10 @@
       <p class="alert"><%= alert %></p>
     </div>
     <%= yield %>
-  <!-- <footer>
-    <li id="footer">Information</li>
-    <li id="footer">Help</li>
-    <li id="footer">Account</li>
-  </footer> -->
+  <footer>
+    <a id="footer" href="/products">Products</a>
+    <a id="footer" href="/about">About</a>
+    <a id="footer" href="contact">Contact</a>
+  </footer>
   </body>
 </html>
