--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="rows">
-<div class="row1"><img id="image1" src="https://ak3.picdn.net/shutterstock/videos/13339763/thumb/3.jpg"></div>
+<div class="row1"><img id="image1" src="https://ak9.picdn.net/shutterstock/videos/10634741/thumb/1.jpg"></div>
 <div class="row2">
 <div id="div"><img id="image2" src="https://s3.amazonaws.com/cgmagazine/2016/04/samsung-galaxy-s7-edge-hardware-review-5.jpg"></div>
   <div id="div1">
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row3">
-      <iframe id="image3" width="854" height="480" src="https://www.youtube.com/embed/dOwVXsOXie4" frameborder="0" allowfullscreen></iframe>
+    <iframe id="image3" width="854" height="480" src="https://www.youtube.com/embed/RKYjdTiMkXM" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="row4">
       <div id="div3">
