--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <div class="dropdown">
   <button class="dropbtn"><%= current_user.email %></button>
   <div class="dropdown-content">
-    <a href="profiles/<%= current_user.profile_id %>">Profile</a>
+    <a href="profiles/<%= current_user.profile %>">Profile</a>
     <a href="/carriers">Carriers</a>
         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
   </div>
