--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -155,16 +155,10 @@ body {
   margin-left: 10px;
   margin-top: 85px;
   text-align: center;
-  flex-grow: 0;
-  transition: flex-grow 0.3s;
 }
 
 a {
   text-decoration: none;
-}
-
-.logo_id:hover {
-
 }
 
 #logo {
@@ -178,7 +172,6 @@ a {
   width: 400px;
   height: auto;
   display: block;
-  /*z-index: 999;*/
   transition: 0.3s;
 }
 
@@ -253,7 +246,7 @@ a {
 }
 
 .about {
-  padding-bottom: 210px;
+  margin-bottom: 210px;
 }
 
 .user {
@@ -351,4 +344,3 @@ footer {
 .dropdown:hover .dropbtn {
   background-color: rgba(151,101,176,1);
 }
-g
