--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -175,6 +175,45 @@ a {
   transition: 0.3s;
 }
 
+.phoneshow {
+  display: flex;
+  flex-direction: column;
+}
+
+.phone {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /*margin-bottom: 146px;*/
+}
+
+.phonephoto {
+  margin-top: 85px;
+  margin-right: 50px;
+}
+
+#phonephoto {
+  width: 500px;
+  height: 500px;
+  margin-right: 50px;
+}
+
+.specname {
+  margin-top: 85px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 50px;
+  justify-content: center;
+}
+
+.specs {
+  margin-top: 85px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 #photo {
   width: 200px;
   height: 200px;
@@ -309,7 +348,9 @@ footer {
 #menu {
   display: flex;
   flex-direction: column;
+  text-align: center;
   margin-top: 50px;
+  font-size: 26px;
 }
 
 #menuoptions {
