--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
       <a id="nav" href="/contact">Contact Us</a>
       <% if current_user %>
       <div class="dropdown">
-  <a href="profiles/<%= current_user.profile %>"><button class="dropbtn"><%= current_user.email %></button></a>
+  <a href="/profiles/<%= current_user.profile %>"><button class="dropbtn"><%= current_user.email %></button></a>
   <div class="dropdown-content">
-    <a href="profiles/<%= current_user.profile %>">Profile</a>
+    <a href="/profiles/<%= current_user.profile %>">Profile</a>
     <a href="/carriers">Carriers</a>
         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
   </div>
