modified some styling

--- a/app/views/carriers/edit.html.erb
+++ b/app/views/carriers/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>Edit carrier</h1>
+<div class="user">
+<h1 id="subhead">Edit carrier</h1>
 
+
+<div class="log">
 <%= render "form" %>
+</div>
+</div>
