--- a/app/assets/stylesheets/carrier.scss
+++ b/app/assets/stylesheets/carrier.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Carrier controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.user {
+  display: flex;
+  flex-direction: column;
+}
