added feedback - Don't merge

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <div class="head">
     <h1 class="name">Skytele</h1>
     <div class="nav">
+      <!-- You can't use the same ID more than once -->
       <a id="nav" href="/">Home</a>
       <a id="nav" href="/products">Products</a>
       <a id="nav" href="/about">About</a>
@@ -45,6 +46,7 @@
     </div>
     <%= yield %>
   <footer>
+    <!-- You can't use the same ID more than once -->
     <a id="footer" href="/products">Products</a>
     <a id="footer" href="/about">About</a>
     <a id="footer" href="contact">Contact</a>
