--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,9 @@
-<h2>Forgot your password?</h2>
+<div class="user">
+
+<h2 id="subhead">Forgot your password?</h2>
+
+
+<div class="log">
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -14,3 +19,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
