--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,8 @@
 
   <body>
     <div class="head">
-    <h1 class="name">Skytele</h1>
+    <a class="name" href="/">Skytele</a>
     <div class="nav">
-      <a id="nav" href="/">Home</a>
       <a id="nav" href="/products">Products</a>
       <a id="nav" href="/about">About</a>
       <a id="nav" href="/contact">Contact Us</a>
@@ -43,11 +42,13 @@
     <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     </div>
-    <%= yield %>
-  <footer>
+    <div class="">
+      <%= yield %>
+    </div>
+  <!-- <footer>
     <a id="footer" href="/products">Products</a>
     <a id="footer" href="/about">About</a>
     <a id="footer" href="contact">Contact</a>
-  </footer>
+  </footer> -->
   </body>
 </html>
