--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="rows">
-  <div class="row1"><img id="image1" src="https://ak9.picdn.net/shutterstock/videos/10634741/thumb/1.jpg"></div>
+  <div class="row1"><img id="image1" src="/images/Android_Smartphones.jpg"></div>
   <div class="row2">
     <div id="div"><img id="image2" src="https://s3.amazonaws.com/cgmagazine/2016/04/samsung-galaxy-s7-edge-hardware-review-5.jpg"></div>
     <div id="div1">
