--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,7 +101,7 @@ body {
 }
 
 #image1 {
-  margin-top: 60px;
+  margin-top: 0;
 }
 
 #image5 {
@@ -324,13 +324,31 @@ footer {
   border-radius: 5px;
 }
 
+.dropbutton {
+  background-color: rgba(91,54,126,0);
+  color: rgba(91,54,126,1);
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: -15px;
+  padding: 10px;
+  border: 20px;
+  border-radius: 5px;
+}
+
+i {
+  font-style: normal;
+  color: rgba(150,150,150,1);
+}
+
 .dropdown-content {
-  display: none;
+  /* display: none; */
+  visibility: hidden;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: -1;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 }
 
 .dropdownlist {
@@ -372,9 +390,96 @@ footer {
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  visibility: visible;
+  /* display: block; */
+  z-index: 1;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 }
 
 .dropdown:hover .dropbtn {
   background-color: rgba(151,101,176,1);
 }
+
+
+/* Testing new submenus */
+
+.sub-menu-parent {
+  position: relative;
+}
+
+.sub-menu {
+  visibility: hidden; /* hides sub-menu */
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  transform: translateY(-2em);
+  z-index: -1;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+}
+
+.sub-menu-parent:focus .sub-menu,
+.sub-menu-parent:focus-within .sub-menu,
+.sub-menu-parent:hover .sub-menu {
+  visibility: visible; /* shows sub-menu */
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(0%);
+  transition-delay: 0s, 0s, 0.3s; /* this removes the transition delay so the menu will be visible while the other styles transition */
+}
+
+/* presentational */
+/* body { padding: 2%; font: 18px/1.4 sans-serif; } */
+
+.drop-down {
+  /* width: 40px; */
+  margin-top: -3px;
+}
+
+.drop-down a {
+  color: rgba(91,54,126,1);
+  /* display: block; */
+  /* padding: 0.5em 1em;  */
+  text-decoration: none;
+}
+
+.drop-down a:hover {
+  color: #F55;
+}
+
+.drop-down ul, .drop-down ul li {
+  list-style-type: none; padding: 0; margin: 0;
+}
+
+.drop-down > ul {
+/* text-align: center; */
+}
+
+.drop-down > ul > li {
+  display: inline-block; border-left: solid 1px #aaa;
+}
+
+.drop-down > ul > li:first-child {
+  border-left: none;
+}
+
+#shop {
+  background: rgba(0,0,0,0);
+  color: rgba(91,54,126,1);
+}
+
+/* .sub-menu { */
+  /* width: 100px; */
+  /* background: white; */
+  /* margin-left: 40px; */
+  /* background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  font-size: 22px;
+} */
+
+/* .sub-menu-child {
+  margin-left: 15px;
+  color: black;
+} */
